# cockroach

./: .gitignore  .pre-commit-config.yaml  .uuid  DEPS.bzl  coverage_mmaprototype.lcov  cpu.out  cpuold.out  docker-compose.yml  go.mod  go.sum  kafkascript.sh  mem.out  memold.out  new  scatter.sh
coverage_html/: cmd_line  index-sort-f.html  index.html
coverage_html/load/: dimension.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  load.go.gcov.html
coverage_html/mmaprototype/: allocator_state.go.gcov.html  cluster_state.go.gcov.html  cluster_state_rebalance_stores.go.gcov.html  constraint.go.gcov.html  constraint_matcher.go.gcov.html  index-sort-f.html  index-sort-l.html  index.html  load.go.gcov.html  memo_helper.go.gcov.html  range_change.go.gcov.html  rebalance_advisor.go.gcov.html  store_load_summary.go.gcov.html  store_set.go.gcov.html  store_status.go.gcov.html  top_k_replicas.go.gcov.html
docs/: index.html
docs/coverage_html/: cmd_line  index-sort-l.html  index.html
docs/coverage_html/load/: vector.go.gcov.html
docs/coverage_html/mmaprototype/: allocator_state.go.gcov.html  cluster_state.go.gcov.html  cluster_state_rebalance_stores.go.gcov.html  constraint.go.gcov.html  index.html  memo_helper.go.gcov.html  rebalance_advisor.go.gcov.html  store_set.go.gcov.html  top_k_replicas.go.gcov.html
pkg/: BUILD.bazel
pkg/backup/: generative_split_and_scatter_processor.go  restore_processor_planning.go
pkg/ccl/changefeedccl/: BUILD.bazel  alter_changefeed_test.go  changefeed_dist.go  changefeed_processors.go  changefeed_processors_test.go  changefeed_stmt.go  changefeed_test.go  encoder_json.go  encoder_test.go  event_processing.go  metrics.go  metrics_kafka.go  nemeses_test.go  parquet.go  sink.go  sink_cloudstorage.go  sink_cloudstorage_test.go  sink_external_connection.go  sink_kafka.go  sink_kafka_connection_test.go  sink_test.go  telemetry.go  topic.go
pkg/ccl/multiregionccl/: BUILD.bazel  datadriven_test.go  multiregion_test.go  roundtrips_test.go
pkg/kv/: db.go  txn.go
pkg/kv/kvpb/: api.go  api.proto
pkg/kv/kvserver/: BUILD.bazel  allocator_integration.go  client_lease_test.go  client_replica_circuit_breaker_test.go  consistency_queue.go  helpers_test.go  kvserver_mma_integration_helper.go  lease_queue.go  merge_queue.go  metrics.go  mma_replica_store.go  mma_store_rebalancer.go  mma_store_rebalancer_test.go  multi_metric_store_rebalancer.go  mvcc_gc_queue.go  mvcc_gc_queue_test.go  queue.go  queue_concurrency_test.go  queue_test.go  raft_log_queue.go  raft_snapshot_queue.go  raft_transport.go  raft_transport_metrics.go  replica.go  replica_app_batch.go  replica_application_cmd.go  replica_application_result.go  replica_backpressure.go  replica_init.go  (+30 more)
pkg/kv/kvserver/allocator/mmaprototypehelpers/: BUILD.bazel  allocator_mma_integration.go  kvserver_mma_integration.go
pkg/kv/kvserver/asim/validator/: BUILD.bazel  config_validator.go  vaidator.go  validator.go  validator_test.go
pkg/kv/kvserver/closedts/multiregionlatency/: BUILD.bazel  closedts_policy.go  latency_refresher.go  latency_refresher_test.go  policy_locality.go
pkg/kv/kvserver/closedts/networklatency/: BUILD.bazel  multi_region_latency.go
pkg/roachpb/: data.proto  metadata.proto  metadata_replicas.go
pkg/rpc/: context.go  context_test.go  heartbeat.go  metrics.go  peer.go  stream_pool.go
pkg/server/: BUILD.bazel  decommission.go  node.go  node_stream_muxer.go  node_stream_muxer_test.go  node_stream_muxer_test_helper.go  server.go  testserver.go
pkg/settings/: registry.go
pkg/sql/: authorization.go  conn_executor.go  crdb_internal.go  distsql_physical_planner.go  internal.go  scatter_test.go  vars.go
pkg/storage/: pebble.go
pkg/testutils/: sideeye.go
pkg/ts/: db.go
pkg/util/queue/: BUILD.bazel  queue.go  queue_test.go  queue_test_helper.go  queue_with_fixed_chunk_size.go
(+602 files in other folders)
