load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "queue",
    srcs = [
        "queue.go",
        "queue_mem.go",
        "queue_test_helper.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/queue",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/randutil",
        "@com_github_cockroachdb_errors//:errors",
        "@com_github_stretchr_testify//require",
        "@com_github_zeebo_assert//:assert",
    ],
)

go_test(
    name = "queue_test",
    srcs = ["queue_test.go"],
    embed = [":queue"],
    deps = [
        "//pkg/testutils",
        "//pkg/util/randutil",
        "@com_github_stretchr_testify//require",
    ],
)
