load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mmaprototypehelpers",
    srcs = ["allocator_mma_integration.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/allocator/mmaprototypehelpers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kv/kvserver/allocator",
        "//pkg/kv/kvserver/allocator/mmaprototype",
        "//pkg/roachpb",
        "//pkg/util/timeutil",
    ],
)
