load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "validator",
    srcs = [
        "config_validator.go",
        "vaidator.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/asim/validator",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kv/kvserver/asim/state",
        "//pkg/roachpb",
    ],
)
