load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "multiregionlatency",
    srcs = ["latency_refresher.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/closedts/multiregionlatency",
    visibility = ["//visibility:public"],
    deps = ["//pkg/roachpb"],
)
